# omicsmad

./: .gitignore  README.md  pyproject.toml
src/omicsmad/: __init__.py  selector.py
tests/: test_selector.py
