[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "omicsmad"
version = "0.1.0"
description = "A robust Scikit-Learn style Feature Selector using Median Absolute Deviation (MAD) for high-throughput genomics data."
readme = "README.md"
requires-python = ">=3.9"
authors = [
    { name = "rizanb", email = "rijann5@gmail.com" }
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
]
dependencies = [
    "numpy>=1.22.0",
    "pandas>=1.4.0",
    "scipy>=1.8.0",
    "matplotlib>=3.5.0",
]

[project.urls]
Homepage = "https://github.com/rizanb"